
The file table now has owner type 'c' for community.

The list_section function can optionally include "Whole School".

The staff_list page has document a drop area for each section.

Renamed and fixed get_residence_perm.

New fuction to list yeargroups associated to a course.

Re-worked report_reports and report_attendance to filter by
permissions.



Version ClaSS-1.0.43 release (2013/03/28)
-------------------------------------------

New Register script for reporting lesson attendance.

Moved the dateDiff function out to the main functions lib.

New geocoding javascript for a route map on the contact_details page.

The medbook can list all new (applied students).

Made SEN status and Medical status fields which can be set in EntryBook.

Shortened the Entrybook form for an enquiry.

Moved all generate_epfusername calls to a dedicated function
new_epfusername which takes care of checking for uniqueness.

Change the use of css background-image to content for compatibility
with Chrome.

Made use of the displayfield's data type in the student_list for
sorting dates and ages etc.

Fixed the identification profile_bid in the class_view_table for
profiles qith bid=% (profiles extending across subjects).



Version ClaSS-1.0.42 release (2013/03/04)
-------------------------------------------

Added a new selerygrow class for ticks as opposed to dots and a
parameter to indicate the number of options to cycle through.

The Targets now have the tick as achieved or not achieved with full
history on display.

Receives mailing now defaults to all for new contacts.

Added table sort to the enrolments_list for enrolment assessments.

New summary page for reporting usage statistics on comments.

The fees access check is now included on th estudent profile page.

Fix to subject permissions when editing sen_view page.

Fix to loading the first tinytab when viewing the sen page in
infobook.

Tweak to the logic of generating invoices when payment method differs
from default.


